# cpp_bigfloat

./: .gitignore  CMakeLists.txt  Makefile  a.out  bigfloat.cpp  bigfloat.h  bigfloat_methods.cpp  test.cpp
lib/: CMakeLists.txt  bigfloat.cpp  bigfloat.h  bigfloat_methods.cpp  my_pi.cpp  my_pi.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
